--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
 ###> doctrine/doctrine-bundle ###
   database:
-    ports: [ "5433:5432", '15432:5432']
+    ports: [ "5432:5432"]
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
